# poetry-pdm

./: README.md
gitp/: pyproject.toml
ppath/: .cruft.json  .gitignore  Dockerfile  README.md  pyproject.toml
ppath/.devcontainer/: devcontainer.json
ppath/.github/workflows/: deploy.yml
ppath/src/ppath/: __init__.py  api.py  app.py  cli.py  sentry.py
ppath/tests/: __init__.py  test_api.py  test_cli.py  test_import.py  test_sentry.py
sbit/: .cookiecutter.json  CONTRIBUTING.md  README.md  noxfile.py  pyproject.toml
sbit/docs/: conf.py  index.md  reference.md  usage.md
sbit/src/sbit/: __init__.py  __main__.py
sbit/tests/: __init__.py  test_main.py
sitec/: CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
sitec/docs/: index.md  modules.md
sitec/tests/: test_foo.py
